Fixed the toList() part of the sortByDepartureTime