@@ -101,7 +101,7 @@ public class Station {
         .stream()
         .filter(trainDeparture -> !trainDeparture.getDepartureTimeWithDelay().isBefore(this.time))
         .sorted(Comparator.comparing(TrainDeparture::getDepartureTime))
-        .collect(Collectors.toList());
+        .toList();
   }
 
 
